--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,7 +21,7 @@
                   <div class="post-tags">
             {{ if .Params.tags }}
             {{ range $index, $tag := .Params.tags }}
-                <a href="{{ $baseurl }}tags/{{ $tag | urlize }}">{{ $tag }}</a>
+                <a href="{{ trim $baseurl "/" }}/tags/{{ $tag | urlize }}">{{ $tag }}</a>
             {{ end }}
             {{ end }}
                   </div>
